# clmd

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  bench_commonmark.js  debug_emphasis.rs  test_debug  test_debug.rs  test_emphasis.rs  test_emphasis_debug.rs  test_emphasis_simple  test_emphasis_simple.rs  test_image.rs
benches/: README.md  ast_conversion_benchmark.rs  categorized_benchmark.rs  fair_comparison.md  feature_benchmark.rs  formatter_benchmark.rs  parse_benchmark.rs  parser_bench.rs  pathological_benchmark.rs  real_world_benchmark.rs  sequence_benchmark.rs  stats.rs  string_optimization_benchmark.rs
benches/samples/: lorem-large.md  lorem-xlarge.md
data/templates/: default.html  default.tex
docs/: architecture.md  benchmark_results.md  commonmark_spec_100_percent.md  developer.md  pandoc_architecture_analysis.md
docs/benchmark/: README.md  cross-language.md  methodology.md  results.md
docs/comparison/: README.md  comrak.md  cross-language.md  pulldown-cmark.md
examples/: README.md  arena_bench.rs  arena_comparison.rs  check_tests.rs  comrak_bench.rs  cross_language_bench.rs  debug_tests.rs  flamegraph_bench.rs  pandoc_style_workflow.rs  pulldown_cmark_bench.rs
examples/bench/: bench_commonmark.js  benchmark.rs  cross_language_bench.rs  cross_rust_bench.rs  flamegraph_bench.rs  package.json
examples/compare/: arena_comparison.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_parse.rs  fuzz_render.rs
src/: abbreviation.rs  adapters.rs  arena.rs  arena_tree.rs  asciify.rs  ast.rs  attributes.rs  autolink.rs  blocks.rs  blocks_arena.rs  char.rs  chunks.rs  clmd_options.rs  config.rs  context.rs  converters.rs  css.rs  csv.rs  data.rs  definition.rs  emoji.rs  error.rs  extensions.rs  footnotes.rs  html_to_md.rs  html_utils.rs  inlines.rs  inlines_arena.rs  iterator.rs  lexer.rs  lib.rs  logging.rs  mediabag.rs  mime.rs  node.rs  node_value.rs  nodes.rs  options.rs  parser.rs  plugins.rs  (+26 more)
src/ast/: mod.rs  node.rs  render_compat.rs  util.rs  visitor.rs
src/ast_nodes/: extensions.rs  mod.rs  traits.rs
src/blocks/: block_info.rs  block_starts.rs  continuation.rs  finalization.rs  helpers.rs  mod.rs  parser.rs  tests.rs
src/compat/: mod.rs  node_compat.rs  options_compat.rs
src/config/: data_key.rs  mod.rs  options.rs
src/context/: common.rs  config.rs  data.rs  io.rs  logging.rs  mediabag.rs  mod.rs  process.rs  pure.rs  uuid.rs  version.rs
src/core/: adapter.rs  adapters.rs  arena.rs  ast.rs  error.rs  iterator.rs  mod.rs  monad.rs  nodes.rs  options.rs  sandbox.rs  shared.rs  state.rs  traverse.rs  tree.rs  walk.rs
src/ext/: autolink.rs  definition.rs  flags.rs  footnotes.rs  mod.rs  shortcodes_data.rs  strikethrough.rs  tables.rs  tagfilter.rs  tasklist.rs  toc.rs
src/extensions/: mod.rs
src/filter/: mod.rs
src/filters/: mod.rs
src/formats/: css.rs  csv.rs  from.rs  mime.rs  mod.rs  slides.rs  tex.rs
src/formatter/: commonmark_formatter.rs  context.rs  mod.rs  node.rs  phased.rs  table.rs  utils.rs
src/from/: html.rs
src/html/: context.rs  mod.rs
src/inlines/: autolinks.rs  emphasis.rs  entities.rs  entities_table.rs  html_tags.rs  links.rs  mod.rs  text.rs  utils.rs
src/io/: format.rs  format_impl.rs  from.rs  mod.rs  test_utils.rs
src/options/: data_key.rs  extension.rs  format.rs  mod.rs  parse.rs  plugins.rs  render.rs  serde.rs  traits.rs  types.rs
src/parse/: mod.rs  options.rs
src/parser/: mod.rs  options.rs
src/parsing/: char.rs  chunks.rs  combinator.rs  mod.rs  primitives.rs  sources.rs  state.rs
src/pipeline/: mod.rs
src/plugin/: mod.rs  owned.rs  syntect.rs
src/plugins/: mod.rs  owned.rs  syntect.rs
src/readers/: bibtex.rs  latex.rs  mod.rs  registry.rs
src/render/: arena_html.rs  commonmark.rs  docx.rs  formatter.rs  formatter_context.rs  formatter_options.rs  formatter_utils.rs  formatting_phase.rs  html.rs  html.rs.current  latex.rs  man.rs  markdown_writer.rs  mod.rs  node_formatter.rs  pdf.rs  phased_formatter.rs  render_purpose.rs  renderer.rs  table_formatter.rs  typst.rs  xml.rs
src/template/: mod.rs
src/templates/: mod.rs
src/test_utils/: mod.rs  spec_parser.rs
src/tests/: mod.rs  shortcodes.rs
src/text/: asciify.rs  char.rs  cjk_spacing.rs  emoji.rs  html_utils.rs  mod.rs  roff_char.rs  sequence.rs  strings.rs  tokenizer.rs  unicode.rs  unicode_width.rs  uri.rs
src/transforms/: mod.rs
src/util/: mod.rs
src/writers/: beamer.rs  bibtex.rs  docx.rs  epub.rs  mod.rs  registry.rs  revealjs.rs  rtf.rs
tests/: api_spec.rs  api_spec_tests.rs  cli_basic.rs  cli_extract.rs  cli_fmt.rs  cli_fmt_cjk_spacing.rs  cli_fmt_line_breaking.rs  cli_general.rs  cli_spec.rs  cli_spec_tests.rs  cli_stats.rs  cli_to_commonmark.rs  cli_to_docx.rs  cli_to_html.rs  cli_toc.rs  command_tests.rs  commonmark_spec.rs  debug_atx.rs  debug_emphasis.rs  debug_escape.rs  debug_links.rs  debug_selected.rs  debug_setext.rs  debug_simple.rs  debug_simple2.rs  debug_single_failures.rs  debug_spec.rs  debug_thematic.rs  edge_cases.rs  entity_tests.rs  flexmark_ast.rs  flexmark_ast_tests.rs  flexmark_format.rs  flexmark_formatter_tests.rs  flexmark_spec.rs  format_integration.rs  format_spec.rs  formatter_integration_tests.rs  formatter_spec_tests.rs  integration_tests.rs  (+21 more)
tests/command/: emphasis.md  headers.md  mod.rs  pandoc_testsuite.md  paragraphs.md
tests/fixtures/: cli_extract_spec.md  cli_fmt_cjk_spacing_spec.md  cli_fmt_line_breaking_spec.md  cli_fmt_spec.md  cli_stats_spec.md  cli_to_html_spec.md  cli_toc_spec.md  edge_cases_spec.md  emphasis_spec.md  entity_spec.md  (+8 more)
(+136 files in other folders)
