[package]
name = "clmd"
version = "0.2.1"
edition = "2021"
description = "A 100% CommonMark and GFM compatible Markdown parser"
license = "MIT"
repository = "https://github.com/clmd/clmd"
keywords = ["markdown", "commonmark", "gfm", "parser"]
categories = ["text-processing", "parser-implementations"]
rust-version = "1.70"
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror = "1.0"
regex = "1.10"
htmlescape = "0.3"
bumpalo = { version = "3.14", features = ["collections"] }
rustc-hash = "1.1"
smallvec = "1.13"
once_cell = "1.19"
typed-arena = "2.0"
bon = "3.0"
arbitrary = { version = "1.3", features = ["derive"] }
clap = { version = "4.5", features = ["cargo"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.12.0"
syntect = { version = "5.2", optional = true, default-features = false, features = ["default-themes", "default-syntaxes", "regex-onig", "html"] }
toml = "0.8"
dirs = "5.0"
bitflags = "2.4"
base64 = "0.22"
urlencoding = "2.1"
md5 = "0.7"
sha2 = "0.10"
rand = "0.8"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
roxmltree = "0.20"

[features]
default = []
syntect = ["dep:syntect"]
serde = []

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"
comrak = "0.35"
pulldown-cmark = "0.13"

[profile.release]
lto = true

# Benchmarks
[[bench]]
name = "categorized_benchmark"
harness = false

[[bench]]
name = "feature_benchmark"
harness = false

[[bench]]
name = "pathological_benchmark"
harness = false

[[bench]]
name = "real_world_benchmark"
harness = false

[[bench]]
name = "sequence_benchmark"
harness = false

[[bench]]
name = "ast_conversion_benchmark"
harness = false

[[bench]]
name = "string_optimization_benchmark"
harness = false

[[bench]]
name = "formatter_benchmark"
harness = false

# Examples
[[example]]
name = "benchmark"
path = "examples/bench/benchmark.rs"

# Binary
[[bin]]
name = "clmd"
path = "src/bin/main.rs"

